<?xml version="1.0"?>
<package format="2">
  <name>sensor_data_transport_wrapper</name>
  <version>0.0.0</version>
  <description>The sensor_data_transport_wrapper package</description>

  <maintainer email="mwasil@outlook.co.id">Mohammad Wasil</maintainer>

  <license>TODO</license>
  <author email="mwasil@outlook.co.id">Mohammad Wasil</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>realsense_camera_wrapper</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>realsense_camera_wrapper</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>realsense_camera_wrapper</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
